--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -114,6 +114,26 @@ The synchronization between managers and contractor to assess their current stat
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
 \subsection{Design}
+We consider a logistics problem where a company serves an area with a fleet of drones. In this area, a number of clients appear with an order for a specific product. One of the drones takes up the order and is dispatched to a warehouse to collect a package with that product. Finally it flies to the client to deliver the package.
+
+Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. Drones can also charge their batteries at the warehouses for a certain cost.
+
+When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. This order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. All drones are considered to be eligible. As there is only one type of bid, the bid specification is implicit and left out of the task announcement. There is no separate expiration time: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. For simplification, a client has only one order and when that order is delivered, the client stops participating.
+
+Drones always act as contractors. Upon receipt of a task announcement, they calculate the bid they would be willing to make. This bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering).
+
+In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In CNCP and DynCNET, the drone bids on every task.
+
+The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy and provides a rough estimate of when the drone might become available again. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking. The client can use this information to delay task announcements if no drone is available or interested. More specifically, if all drones are busy, the minimum of all estimated times when drones could become available again is taken as the next time for the task announcement. This reduces the number of messages that are sent by the client (and replies by the drones). If drones give the task a low ranking, the task announcement is immediately retried as other more interesting tasks will have been awarded and the remaining drones may now rank this task as the best.
+
+A client waits one tick for bids to arrive. It sorts the incoming bids on the lowest cost to the drone (the client has no other incentive to choose one drone over the other). All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
+
+In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.
+
+Once a drone has received a task, it starts executing the task by flying to the warehouse at which the package could be retrieved in such a way that the total cost of flying to that warehouse and to the client with the price of the package at that warehouse is minimal. It picks up the package at the warehouse and can possibly charge its battery to make sure that it can complete the delivery. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
+
+In DynCNET, during the phase where the drone is flying to the warehouse to pick up the package, both the drone and the client are allowed to continue negotiations with other agents, respectively by submitting bids and sending out task announcements. When a drone has been awarded a task with a lower cost than its current task, it cancels the task and notifies that task's client. This client will then reannounce the task. Inversely, if a client can award the task to another drone whose task is lower, it will cancel the contract with the drone that was previously awarded the task. This drone will then start bidding on other tasks. Only when the drone has picked up the package, will both the client and the drone fully commit to the contract and stop negotiating until the package has been delivered.
+
 \outline{\begin{itemize}
         \item drones leveren orders uit warehouses aan clients (1 order per client)
         \item bid berekening (statistisch relevant)
@@ -124,7 +144,7 @@ The synchronization between managers and contractor to assess their current stat
 \commentY{Add sequence diagrams of 3 protocols???}
 
 \subsubsection{Agent FSM's} 
-\commentV{waar moet dit best komen?\proposalY{Ik zou het er nu misschien zelfs uitlaten. Daarvoor was het ook deels nodig om aan onze 3 pagina's te komen. Dus bij design eventueel wel nog FSM's zetten, maar zeker niet "Agent Architecture" erbij zetten.}}
+\commentV{waar moet dit best komen?\proposalY{Ik zou het er nu misschien zelfs uitlaten. Daarvoor was het ook deels nodig om aan onze 3 pagina's te komen. Dus bij design eventueel wel nog FSM's zetten, maar zeker niet "Agent Architecture" erbij zetten.\commentV{ik vind hier nog wel goed}}}
 Both the drone and client agents have very simple architectures. They can be modeled using simple finite state machines.
 
 Figure~\ref{fig:droneFSM} gives the FSM for the drone agent in the different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. A drone can enter this state from all other states and can never leave it again}. The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP nor DynCNET. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. DynCNET also has two extra transitions: from \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} back to \texttt{IDLE} in case the client cancels the contract. CNCP and DynCNET also have the \texttt{gotContract} transition from \texttt{IDLE} and \texttt{CHARGING\_FOR\_CONTRACT} to \texttt{PICKING\_UP}, while in CNET the drone has to pass through the \texttt{PROPOSED\_BID} state.
@@ -147,32 +167,24 @@ The drone starts of in the \texttt{IDLE} state. In this state, it will move to t
     \label{fig:clientFSM}
 \end{figure}
 
-The client FSM, in figure~\ref{fig:clientFSM}, is even simpler. The clients starts in the \texttt{AWARDING} state. When a contract is negotiated, it enters the \texttt{ASSIGNED} state. From then on, it is a straight path to the \texttt{EXECUTING} and \texttt{DELIVERED} state. Only a drone failure, or the cancellation of a contract in DynCNET, can change the state flow. If the maximum delivery time for the client has passed before a drone delivered the package, the client will enter the \texttt{OVERTIME} state.
+The client FSM, in figure~\ref{fig:clientFSM}, is even simpler. The client starts in the \texttt{AWARDING} state. When a contract is negotiated, it enters the \texttt{ASSIGNED} state. From then on, it is a straight path to the \texttt{EXECUTING} and \texttt{DELIVERED} state. Only a drone failure, or the cancellation of a contract in DynCNET, can change the state flow. If the maximum delivery time for the client has passed before a drone delivered the package, the client will enter the \texttt{OVERTIME} state.
 
 In CNET and CNCP, a client can only send calls for proposals while in the \texttt{AWARDING} state. In DynCNET, it can also send calls for proposals in the \texttt{ASSIGNED} state.
 
 \commentY{Table met communication primitives as in \cite{TentativeBidding}?}
 
-
+\subsubsection{temp section for Yens' proposal}
 \taskS{Haal uit proposalY de verschillen met CNET, CNCP en DynCNET}
     
-\proposalY{\textbf{CNET: } Our system has two types of agents: clients (who represent a package that needs to be delivered) and a drone. The two types of agents each fulfill a different role in CNET: clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents \textbf{footnote}{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}. As all drones are eligible, no eligibility information is provided. The bid specification is missing as well. There is no expiration time on the call for proposal, as drones should bid as quickly as they can.
+\proposalY{\textbf{CNET: } 
     
-When drones receive task announcements, they will calculate, for every warehouse, the estimated profit \textbf{footnote}{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected \textbf{footnote}{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter the \texttt{PROPOSED\_BID} state in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
+In case the drone would crash, it would sent one last signal to the client to inform him of the crash \textbf{footnote}{In practice, outside a simulator, a polling approach might be used instead.}. The client would then start sending out calls for proposals again.
 
-When a client receives a bid, it will compare it to the other bids it got (if any) and will award the contract to the drone which will make the most profit for the company  \textbf{footnote}{The client agent thus acts as if it is the manager, responsible for the real client, trying to maximize the profit the company can make on this client}. It will send the drone a message to inform him of the contract. All other drones will be informed that their proposal has been declined. If later on, more proposals would arrive, the client will decline them as well. 
-
-Because drones won't bid if it is not economically interesting, all bids are satisfactory for the client.
-
-Once the drone has received the contract from the client, it will start executing it. After picking up the package at the warehouse, the drone will inform the client about this. When it has delivered the package, a message is sent as well. In case the drone would crash, it would sent one last signal to the client to inform him of the crash \textbf{footnote}{In practice, outside a simulator, a polling approach might be used instead.}. The client would then start sending out calls for proposals again.
-
-As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or his bid was declined. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As a drone can only hold 1 contract, there is no need for a local scheduler within the drone.
-
-To reduce the message count significantly, drones send explicit refuse messages to clients (as answer to a call for proposal). In these messages, the reason for refusal is added. There are 3 possibilities: \texttt{BUSY} \textbf{footnote}{The drone is executing another delivery}, \texttt{LOW\_RANKING} \textbf{footnote}{The drone prefers the proposal of another client.} and \texttt{INELIGIBLE} \textbf{footnote}{It is not economically profitable for the drone to deliver to this client}. Clients will act smart based on these refusal reasons. If a \texttt{LOW\_RANKING} is received, it can send a new call for proposal immediately as it is likely that a drone was refused the contract it preferred. If only \texttt{BUSY} or \texttt{INELIGIBLE} refusals are received, a new immediate call for proposal has little chance of succeeding. We know that the drones are busy delivering other packages or are too far away. Clients can thus wait until a drone becomes available again. \cite{CNET} suggests that drones could declare when they are available and what kind of tasks they can execute so the clients can propose them instead of the other way around. We decided to give extra information to the refusal message: If busy, the refusal message also contains a lower limit on when the drone will become available again. The client can now wait with sending out new calls for proposals until this lower limit has passed.}
+As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or his bid was declined. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As a drone can only hold 1 contract, there is no need for a local scheduler within the drone.}
 
 \proposalY{\textbf{CNCP:} The earlier solution suffers from 1 major flaw: drones have to commit to their bid until the client accepts or declines their bid. They are not allowed to bid on other task announcements while they have a bid outstanding. As their are $n$ drones and $m$ clients, $n*m$ bids are possible in theory. In practice, only $n$ bids are sent out. In the worst case, where all drones rank the clients in the same order $O(m)$ rounds of bidding are necessary to assign all clients to drones in CNET.
 
-In CNCP, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message, should it commit to a bid. In case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery \textbf{footnote}{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
+In CNCP, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message, should it commit to a bid. In case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery \textbf{footnote}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
 \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?} 
 
 While CNCP as described in \cite{CNCP} requires an extra $O(2*n)$ messages, our design only requires one extra message per bidding round. We believe the number of bidding rounds will be reduced drastically, and therefore the total message count as well (compared to CNET).}
@@ -203,6 +215,7 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
         \item Feit dat ze enkel kunnen opladen als ze IDLE (CHARGING) zijn of in CHARGING\_FOR\_WAREHOUSE? En dus niet in andere warehouses. En ook niet voor ze naar andere warehouse vertrekken.
     \end{itemize}
     }
+    \commentV{hier zetten? \proposalY{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}}
 \commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving}
 \commentV{misschien bij theory gedeelte?\commentY{Wat bij theorie gedeelte?}}
 
