--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -117,20 +117,21 @@ The synchronization between managers and contractor to assess their current stat
 We consider a logistics problem where a company serves an area with a fleet of drones. In this area, a number of clients appear with an order for a specific product. One of the drones takes up the order and is dispatched to a warehouse to collect a package with that product. Finally it flies to the client to deliver the package.
 
 Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. Drones can also charge their batteries at the warehouses for a certain cost.
+\commentY{Batteries "verschijnen opeens" in deze sectie. Zou ook zonder inleiding "leesbaar" moeten zijn op zich, denk ik}
 
-When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. This order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. All drones are considered to be eligible. As there is only one type of bid, the bid specification is implicit and left out of the task announcement. There is no separate expiration time: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. For simplification, a client has only one order and when that order is delivered, the client stops participating.
+When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. This order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. All drones are considered to be eligible. As there is only one type of bid, the bid specification is implicit and left out of the task announcement. There is no separate \proposalY{bidding} expiration time: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. For simplification, a client has only one order and when that order is delivered, the client stops participating.
 
 Drones always act as contractors. Upon receipt of a task announcement, they calculate the bid they would be willing to make. This bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering).
 
-In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In CNCP and DynCNET, the drone bids on every task.
+In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. \proposalY{Expliciet benadrukken dat dit anders is dan CNET en waarom we dit gedaan hebben (no bidding expiration)} In CNCP and DynCNET, the drone bids on every task. \proposalY{while not committed to a contract}
 
-The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy and provides a rough estimate of when the drone might become available again. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking. The client can use this information to delay task announcements if no drone is available or interested. More specifically, if all drones are busy, the minimum of all estimated times when drones could become available again is taken as the next time for the task announcement. This reduces the number of messages that are sent by the client (and replies by the drones). If drones give the task a low ranking, the task announcement is immediately retried as other more interesting tasks will have been awarded and the remaining drones may now rank this task as the best.
+The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy and provides a rough estimate of when the drone might become available again \proposalY{it answers that it is busy and provides a lowerlimit of when the drone might become available again, based solely on the current distance to the client}. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking. The client can use this information to delay task announcements if no drone is available or interested. More specifically, if all drones are busy \commentY{or ineligible}, the minimum of all estimated times when drones could become available again is taken as the next time for the task announcement. This reduces the number of messages that are sent by the client (and replies by the drones). If drones \proposalY{a drone} give the task a low ranking, the task announcement is immediately retried as other more interesting tasks will have been awarded and the remaining drones may now rank this task as the best.
 
-A client waits one tick for bids to arrive. It sorts the incoming bids on the lowest cost to the drone (the client has no other incentive to choose one drone over the other). All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
+A client waits one tick for bids to arrive. It sorts the incoming bids on the lowest cost to the drone (the client has no other incentive to choose one drone over the other\commentY{Client = manager eerder, want client zou kunnen sorteren op deliveryTime, lowest cost to the company }). All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.
 
-Once a drone has received a task, it starts executing the task by flying to the warehouse at which the package could be retrieved in such a way that the total cost of flying to that warehouse and to the client with the price of the package at that warehouse is minimal. It picks up the package at the warehouse and can possibly charge its battery to make sure that it can complete the delivery. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
+Once a drone has received a task, it starts executing the task by flying to the warehouse at which the package could be retrieved in such a way that the total cost of flying to that warehouse and to the client with the price of the package at that warehouse is minimal\proposalY{to the warehouse with the lowest estimated cost}. It picks up the package at the warehouse and can possibly charge its battery to make sure that it can complete the delivery\commentY{Iets zeggen over het opladen tot 20 \%? "Charges until it must leave or until the battery is sufficiently charged to minimize the risks of failing"}. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
 In DynCNET, during the phase where the drone is flying to the warehouse to pick up the package, both the drone and the client are allowed to continue negotiations with other agents, respectively by submitting bids and sending out task announcements. When a drone has been awarded a task with a lower cost than its current task, it cancels the task and notifies that task's client. This client will then reannounce the task. Inversely, if a client can award the task to another drone whose task is lower, it will cancel the contract with the drone that was previously awarded the task. This drone will then start bidding on other tasks. Only when the drone has picked up the package, will both the client and the drone fully commit to the contract and stop negotiating until the package has been delivered.
 
