--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -150,9 +150,8 @@ For simplification, all agents are completely aware of the whole world and can m
 
 \commentY{Add sequence diagrams of 3 protocols??? \commentV{als er nog plaats is in het verslag...}}
 
-\commentV{Agent architecture: zie section 2.3 https://lirias.kuleuven.be/bitstream/123456789/156687/1/CW478.pdf}
-\subsubsection{Agent state machines} 
-\commentV{waar moet dit best komen?\proposalY{Ik zou het er nu misschien zelfs uitlaten. Daarvoor was het ook deels nodig om aan onze 3 pagina's te komen. Dus bij design eventueel wel nog FSM's zetten, maar zeker niet "Agent Architecture" erbij zetten.\commentV{ik vind hier nog wel goed}}}
+\commentV{Agent architecture: zie section 2.3 https://lirias.kuleuven.be/bitstream/123456789/156687/1/CW478.pdf\commentY{Dat is toch veel complexer dan hoe onze architectuur eruit ziet?}}
+\subsubsection{Agent state machines}
 Both the drone and client use finite state machines to define in which phase of the negotiation they are situated.
 
 \begin{figure}[htp]
@@ -168,11 +167,7 @@ If the client awards the task to the drone, the drone goes into the \texttt{PICK
 
 The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP nor DynCNET.  DynCNET also has two extra transitions: from \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} back to \texttt{IDLE}, in case the client cancels the contract. CNCP and DynCNET also have a direct \texttt{gotContract} transition from \texttt{IDLE} and \texttt{CHARGING\_FOR\_CONTRACT} to \texttt{PICKING\_UP}. In CNET the drone first has to pass through the \texttt{PROPOSED\_BID} state.
 
-
-
-\commentY{Ook "biedingen" beter op FSM weergeven? Of dat laten voor sequence diagram}
-
-
+\commentY{Ook "biedingen" beter op FSM weergeven? Of dat laten voor sequence diagram\commentY{Ik denk dat sequence diagrammen niet nodig zijn, tenzij we ze in theorie sectie zouden willen zetten.}}
 
 \begin{figure}[htp]
     \centering
@@ -223,7 +218,6 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
         \item tasks uit literature zijn orders bij ons
         \item verschillen in messaging
         \item concretere berekening bid
-        \item hier de state machines? (of eerder bij design)
         \item Feit dat ze enkel kunnen opladen als ze IDLE (CHARGING) zijn of in CHARGING\_FOR\_WAREHOUSE? En dus niet in andere warehouses. En ook niet voor ze naar andere warehouse vertrekken.
     \end{itemize}
     }
