--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -140,6 +140,7 @@ In case the drone would crash, the notification of this failure to the client is
 For simplification, all agents are completely aware of the whole world and can message all other agents. 
 
 \commentV{customers arrive randomly}
+\commentY{Warehouses randomly algorithm beschrijven}
 
 \outline{\begin{itemize}
         \item drones leveren orders uit warehouses aan clients (1 order per client)
