--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -120,7 +120,7 @@ Across the world several warehouses are located. For simplification, these wareh
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
-A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with the same order. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price.
+A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price.
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents. 
 
